# workflow_sample

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
cfd/: __init__.py  config.py  constants.py  solver.py
docs/: cfd_architecture.md  cfd_definition_of_done.md  cfd_iteration_guide.md  cfd_module_interfaces.md  current_agent_handoff.md  feature_request_lax_wendroff.md  paper_to_code_workflow.md  validation_index.md
examples/: compare_advection_schemes.py  run_cfd_entropy_wave.py  run_cfd_entropy_wave_convergence.py  run_cfd_hll_validation.py  run_cfd_isentropic_vortex.py  run_cfd_isentropic_vortex_convergence.py  run_cfd_sod_2d.py  run_cfd_uniform_flow.py  run_cfweno_burgers_cfl_sweep.py  run_cfweno_burgers_convergence.py  run_cfweno_burgers_demo.py  run_cfweno_burgers_order_recovery.py  run_cfweno_burgers_predictor_sweep.py  run_cfweno_burgers_reference_sensitivity.py  run_cfweno_scalar_cfl_sweep.py  run_cfweno_scalar_convergence.py  run_cfweno_scalar_demo.py
results/: advection_analysis.md  advection_error_summary.csv
solver/: __init__.py  grid.py  schemes.py  simulate.py
templates/: paper_extraction_report.md  scheme_spec.md  task_spec.md  task_traceability_manifest.md
tests/: test_approval_checker.py  test_cfd_boundary.py  test_cfd_entropy_wave.py  test_cfd_fluxes.py  test_cfd_isentropic_vortex.py  test_cfd_limiters.py  test_cfd_muscl_reconstruction.py  test_cfd_solver_uniform.py  test_cfd_time_integration.py  test_cfd_timestep.py  test_cfd_update.py  test_cfd_validation_errors.py  test_cfd_variables.py  (+13 more)
(+178 files in other folders)
