[project]
name = "workflow-sample"
version = "0.1.0"
description = "Multi-agent workflow demo: adding numerical schemes to a 1D scalar advection solver"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
